[package]
name = "ubus"
version = "0.1.0"
authors = ["James Lee <jbit@jbit.net>"]
edition = "2018"
description = "Work-in-progress: OpenWRT ubus client library in pure Rust"
keywords = ["no-std", "openwrt"]
categories = ["no-std"]
license = "BSD-2-Clause"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
no_std = []

[dependencies]
jsonpath-rust = "0.3.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
storage_endian = { git = "https://github.com/jbit/storage_endian.git", version = "0.1.0" }

[profile.release]
panic = 'abort'

