[package]
name = "ubus"
version = "0.1.3"
authors = ["James Lee <jbit@jbit.net>", "Kshava Lewis <knightmare1980@gmail.com>"]
edition = "2021"
description = "Work-in-progress: OpenWRT ubus client library in pure Rust"
keywords = ["embedded", "openwrt"]
categories = ["embedded", "os", "linux-apis","api-bindings"]
license = "BSD-2-Clause"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
no_std = []

[dependencies]
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
storage_endian = { git = "https://github.com/jbit/storage_endian.git", version = "0.1.0" }
thiserror = "1.0.52"

[profile.release]
panic = 'abort'
opt-level = 'z' # Optimize for size.
lto = true      # Enable link time optimization.
strip = true
codegen-units = 1

